--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "clang-format": "^1.8.0",
     "concurrently": "^8.1.0",
     "css-loader": "^6.8.1",
-    "eslint": ">=5.16.0",
+    "eslint": "^8.42.0",
     "eslint-config-google": "^0.14.0",
     "http-server": "^14.1.1",
     "style-loader": "^3.3.3",
