--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "lint": "eslint src/index.js",
-    "format": "clang-format -i -style=Google src/index.js",
+    "lint": "eslint src/index.ts",
+    "format": "clang-format -i -style=google src/index.ts",
     "preserve": "cp scripts/pre-commit .git/hooks/ && chmod +x .git/hooks/pre-commit",
     "serve": "cp src/index.html dist/ && concurrently \"http-server data/ -p 3000 --cors\" \"webpack serve\"",
     "build": "mkdir -p dist/ && webpack && cp src/index.html dist/"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.59.9",
     "clang-format": "^1.8.0",
     "concurrently": "^8.1.0",
     "css-loader": "^6.8.1",
@@ -22,6 +23,8 @@
     "eslint-config-google": "^0.14.0",
     "http-server": "^14.1.1",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.1.3",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
